--- a/django/mysite/raceresults/templates/raceresults/index.html
+++ b/django/mysite/raceresults/templates/raceresults/index.html
@@ -1,7 +1,7 @@
 {% if l_races %}
   <ul>
     {% for race in l_races %}
-    <li><a href="/race/{{race.id}}/">{{race.race_name}}</a> {{race.race_date}} {{race.city}}</li>
+    <li><a href="/raceresults/race/{{race.id}}/">{{race.race_name}}</a> {{race.race_date}} {{race.city}}</li>
     {% endfor %}
   </ul>
 {% else %}
