Add css atribute to table
I did this by adding a SimpleRace class and setting an atrribute as
described in the below link

https://django-tables2.readthedocs.io/en/latest/pages/custom-rendering.html

--- a/django/mysite/raceresults/templates/race/index.html
+++ b/django/mysite/raceresults/templates/race/index.html
@@ -3,13 +3,10 @@
 <!doctype html>
 <html>
   <head>
-    
-  <!--<link rel="stylesheet" href="/static/django_tables2/themes/paleblue/css/screen.css" />
-  --> 
 
   {% load static %}
-  <link rel="stylesheet" href="{% static 'race/table1.css' %}"  />
- 
+  <link rel="stylesheet" type="text/css" href="{% static 'race/table1.css' %}">
+  
   </head>
   <body>
     {% render_table l_race %}
