Render multiple age categories

--- a/django/mysite/raceresults/templates/gp/index.html
+++ b/django/mysite/raceresults/templates/gp/index.html
@@ -13,6 +13,12 @@
     <br />
     <br />
     {% render_table l_race2 %}
+    <br />
+    <br />
+    {% render_table l_race3 %}
+    <br />
+    <br />
+    {% render_table l_race4 %}
   </body>
 </html>
 
