--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,11 +1,8 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="/assets/css/styles.css">
-    <title>{{ page.title }}</title>
-  </head>
+    {% include head.html %}
   <body>
+    {% include header.html %}
     {{ content }}
   </body>
 </html>
