--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,8 +4,9 @@
 			<ul>
 <li style="float:left"><a href="{{ "/" | prepend: site.baseurl }}">Home</a></li>
 {% for page in site.pages %} {% if page.title %}
+{% if page.pagetypes contains 'main' %}
 <li style="float:right"><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></li>
-{% endif %} {% endfor %}
+{% endif %} {% endif %} {% endfor %}
 			</li>
 			</ul>
 		</nav>
