--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,5 +14,5 @@
 </aside>
 
 <header>
-	<h1><a href="{{ site.baseurl }}/">Race Results{{ site.title }}</a></h1>
+	<h1><a href="{{ site.baseurl }}/">Race Results</a></h1>
 </header>
