Add base template
This commit also adds a script to compile the jekyll scss and add it to
the django project

--- a/django/mysite/raceresults/templates/raceresults/index.html
+++ b/django/mysite/raceresults/templates/raceresults/index.html
@@ -1,3 +1,6 @@
+{% extends 'raceresults/base.html' %}
+{% block body_block %}
+
 {% if l_races %}
   <ul>
     {% for race in l_races %}
@@ -8,3 +11,4 @@
 <p>No races are listed</p>
 {% endif %}
   
+{% endblock %}
