--- a/django/mysite/raceresults/templates/race/index.html
+++ b/django/mysite/raceresults/templates/race/index.html
@@ -1,3 +1,5 @@
+{% extends 'raceresults/base.html' %}
+{% block body_block %}
 
 {% load render_table from django_tables2 %}
 <!doctype html>
@@ -9,7 +11,9 @@
   
   </head>
   <body>
+    <br>
     {% render_table l_race %}
   </body>
 </html>
 
+{% endblock %}
