Add search option
Add a form that allows you to search for a runner by last name, then add
url and view that searches for the runner.

--- a/django/mysite/raceresults/templates/raceresults/base.html
+++ b/django/mysite/raceresults/templates/raceresults/base.html
@@ -42,6 +42,12 @@
 
 
     <body>
+
+        <form action="/raceresults/search/" method="get">
+          Search last name:<input type="text" name="last" id="id_last" value="{{ query }}"/>
+          <input type="submit" value="Search" />
+        </form>
+
         {% block body_block %}{% endblock %}
     </body>
 </html>
