--- a/django/mysite/raceresults/templates/runner/index.html
+++ b/django/mysite/raceresults/templates/runner/index.html
@@ -1,3 +1,5 @@
+{% extends 'raceresults/base.html' %}
+{% block body_block %}
 
 {% load render_table from django_tables2 %}
 <!doctype html>
@@ -13,3 +15,4 @@
   </body>
 </html>
 
+{% endblock %}
