--- a/django/mysite/raceresults/static/main.css
+++ b/django/mysite/raceresults/static/main.css
@@ -1,3 +1,5 @@
+
+
 *,
 *::before,
 *::after {
@@ -41,7 +43,7 @@ a:visited {
 a:hover {
   color: #19ccfa;
   text-decoration: underline; }
-
+/*
 header {
   background: #1d1425;
   padding: 0px 15px;
@@ -51,6 +53,7 @@ header {
   display: flex;
   justify-content: center;
   align-items: center; }
+*/
 
 main {
   padding: 0 15px;
