--- a/django/mysite/raceresults/templates/raceresults/base.html
+++ b/django/mysite/raceresults/templates/raceresults/base.html
@@ -36,10 +36,57 @@
 	</div>
 </aside>
 
-<header>
-	<h1><a href="test/">Race Results</a></h1>
-</header>
+<style>
+/* The hero image */
+.hero-image {
+  /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("{% static 'images/run2.jpg' %}");
 
+  /* Set a specific height */
+  height: 100%;
+
+  /* Position and center the image to scale nicely on all screens */
+  background-position: center;
+  background-repeat: repeat;
+  background-size: cover;
+  position: relative;
+}
+
+/* Place text in the middle of the image */
+.hero-text {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+}
+
+
+header {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("{% static 'images/run2.jpg' %}");
+  background-size: 100vh;
+  padding: 0px 15px;
+  margin: 10px 0 0;
+  text-align: center;
+  vertical-align: top;
+  height: 40vh;
+  display: flex;
+  justify-content: center;
+  }
+
+
+h1 {
+  color: #ffffff;
+  color: rgba(255, 255, 255, 0.675);
+  font-size: 3.0em;
+  text-align: center;
+   }
+</style>
+
+<header>
+	<h1>MVP Stockade-athon Race Results</h1> 
+</header>
 
     <body>
 
